[metadata]
name = sprockets.logging
version = attr: sprockets_logging.version
description = Making logs nicer since 2015!
long_description = file: README.rst
url = "https://github.com/sprockets/sprockets.logging"
author = "Dave Shawley"
author_email = "daves@aweber.com"
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.7
install_requires =
    tornado

[options.extras_require]
dev =
    coverage
    flake8
    nose
    sphinx
    tox
    wheel
docs =
    sphinx
    sphinx-rtd-theme
    sphinxcontrib-httpdomain

#-----------------------------------------------------------------------------
[bdist_wheel]
universal = 1

[coverage:report]
show_missing = 1

[flake8]
exclude = build,env,dist,.*

[nosetests]
cover-branches = 1
cover-erase = 1
cover-html = 1
cover-html-dir = build/coverage
cover-package = sprockets_logging
