[metadata]
name = sprockets.logging
version = attr: sprockets_logging.version
description = Making logs nicer since 2015!
long_description = file: README.rst
url = "https://github.com/sprockets/sprockets.logging"
author = "Dave Shawley"
author_email = "daves@aweber.com"
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.7
install_requires =
    tornado

[options.extras_require]
dev =
    coverage==4.5.4
    flake8==3.7.9
    nose==1.3.7
    readme-renderer==24.0
    sphinx==2.2.1
    tox==3.14.1
    wheel==0.33.6
    yapf==0.28.0
docs =
    sphinx>=2.2
    sphinx-rtd-theme
    sphinxcontrib-httpdomain

#-----------------------------------------------------------------------------
[bdist_wheel]
universal = 1

[coverage:report]
show_missing = 1

[flake8]
exclude = build,env,dist,.*

[nosetests]
cover-branches = 1
cover-erase = 1
cover-html = 1
cover-html-dir = build/coverage
cover-min-percentage = 100
cover-package = sprockets_logging
cover-xml = 1
cover-xml-file = build/coverage.xml
with-xunit = 1
xunit-file = build/nosetests.xml

[yapf]
allow_split_before_dict_value = False
